# quantaoptima

./: .gitignore  ACTIVATE_PRO.sh  BENCHMARK_REPORT.md  LAUNCH.sh  LAUNCH_NOW.sh  LAUNCH_POSTS.md  LAUNCH_v2.sh  Procfile  QuantaOptima_Benchmark_Report.html  QuantaOptima_Capabilities_Report.html  QuantaOptima_Definitive_Report.html  README.md  SETUP_MCP.sh  generate_license.py  pyproject.toml  requirements-webhook.txt  stripe_setup.py  stripe_webhook.py  webhook_handler.py
.github/workflows/: ci.yml
benchmarks/: benchmark.py  benchmark_results.json  rigorous_validation.py  scaling_results.json
docs/: index.html  thanks.html
mcp_server/: server.py
quantaoptima/: __init__.py  audit.py  core.py  licensing.py  mcp_algorithm.py  optimizer.py  server.py  viewer.py
tests/: test_core.py
