[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "quantaoptima"
version = "0.2.0"
description = "Quantum-inspired optimization with entropy-constrained measurement collapse. 7-31x fewer function evaluations than classical methods."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.9"
authors = [
    { name = "Justin Hart", email = "hartjustin6@gmail.com" },
]
keywords = [
    "optimization",
    "quantum-inspired",
    "evolutionary",
    "mcp",
    "llm-tools",
    "black-box-optimization",
    "ai-safety",
    "interpretability",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "numpy>=1.21",
]

[project.optional-dependencies]
mcp = [
    "mcp[cli]>=1.0",
    "pydantic>=2.0",
]
benchmarks = [
    "scipy>=1.9",
]
all = [
    "quantaoptima[mcp,benchmarks]",
]
dev = [
    "quantaoptima[all]",
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[project.scripts]
quantaoptima-server = "quantaoptima.server:main"

[project.urls]
Homepage = "https://github.com/justinhart/quantaoptima"
Documentation = "https://github.com/justinhart/quantaoptima#readme"
Repository = "https://github.com/justinhart/quantaoptima"
Issues = "https://github.com/justinhart/quantaoptima/issues"

[tool.hatch.build.targets.wheel]
packages = ["quantaoptima"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
