[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "quantaoptima"
version = "0.3.0"
description = "Auditable AI Actions — cryptographic audit trails for AI agent workflows. HMAC-SHA256 hash chain, MCP server, built-in optimizer demo."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.9"
authors = [
    { name = "Justin Hart", email = "hartjustin6@gmail.com" },
]
keywords = [
    "audit-trail",
    "cryptographic-audit",
    "mcp",
    "llm-tools",
    "ai-agents",
    "hmac",
    "hash-chain",
    "ai-safety",
    "interpretability",
    "optimization",
    "quantum-inspired",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Security :: Cryptography",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "numpy>=1.21",
    "scipy>=1.9",
    "mcp[cli]>=1.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[project.scripts]
quantaoptima-server = "quantaoptima.server:main"

[project.urls]
Homepage = "https://github.com/jdhart81/quantaoptima"
Documentation = "https://github.com/jdhart81/quantaoptima#readme"
Repository = "https://github.com/jdhart81/quantaoptima"
Issues = "https://github.com/jdhart81/quantaoptima/issues"

[tool.hatch.build.targets.wheel]
packages = ["quantaoptima"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
